[package]
name = "tcp_typed"
version = "0.1.4"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","network-programming"]
keywords = ["tcp","socket"]
description = """
A wrapper around platform TCP socket APIs that leverages the type system to ensure correct usage.

It's quite easy to accidentally misuse the Berkeley sockets or similar APIs, resulting in ECONNRESET/EPIPE/etc, data being lost on close, and potential hangs from non-exhaustive collection of edge-triggered events.

This library aims to make it impossible to misuse in non-unsafe code.
"""
repository = "https://github.com/alecmocatta/tcp_typed"
homepage = "https://github.com/alecmocatta/tcp_typed"
documentation = "https://docs.rs/tcp_typed/0.1.4"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/tcp_typed", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
itertools = "0.8"
log = "0.4"
palaver = "0.2"
socketstat = "0.1"

[target.'cfg(unix)'.dependencies]
nix = "0.15"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
